--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2 December 1996</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>vanessa.bonanno2@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Vissandone, UD, Italy</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Basiliano, UD, Italy</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Web page:</strong> <span><a href="https://www.linkedin.com/in/vanessa-bonanno-2a1516158/">LinkedIn</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master Degree in Digital Humanities</span></li>
@@ -540,7 +540,7 @@
               <h4>Vanessa Bonanno</h4>
               <p><em></em></p>
               <ul>
-                <li>Via Girardini, 7, Basiliano, UD, Italy</li>
+                <li>Basiliano, UD, Italy</li>
                 <li>vanessa.bonanno2@gmail.com</li>
               </ul>
             </div>
