--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Web pages</a></h4>
+            <h4 class="title"><a href="">Front-end developing</a></h4>
             <p class="description">Link</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
