--- a/index.html
+++ b/index.html
@@ -473,18 +473,18 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Front-end developing</a></h4>
-            <p class="description">Link</p>
+            <h4 class="title">Front-end developing</h4>
+            <p class="description"><a href="portfolio-details.html#python">See projects</a></p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
-            <h4 class="title"><a href="">Graphics</a></h4>
-            <p class="description">Link</p>
+            <h4 class="title">Design</a></h4>
+            <p class="description"><a href="portfolio-details.html#sc">See projects</a></p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="">Video editing</a></h4>
-            <p class="description">Link</p>
+            <h4 class="title">Video editing</a></h4>
+            <p class="description"><a href="portfolio-details.html#movie">See projects</a></p>
           </div>
           
         </div>
@@ -502,7 +502,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          
+          <p>Download: <a href="assets/img/CV4994520.pdf" download>Curriculum Vitae</a></p>
         </div>
 
         <div class="row">
