--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+    
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8M82G3XW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D8M82G3XW5');
+  </script>
+
+
   <!-- www.flaticon.com/free-icons/sunflower > by juicy_fish  -->
   <link href="assets/img/sunflower.png" rel="icon">
   <link href="assets/img/sunflower.png" rel="apple-touch-icon">
