--- a/index.html
+++ b/index.html
@@ -520,9 +520,9 @@
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Personal data</h3>
-            <div class="resume-item pb-0">
+            <div class="resume-item">
               <h4>Vanessa Bonanno</h4>
-              <p><em></em></p>
+              <h5>born december 1996</h5>
               <ul>
                 <li>Basiliano, UD, Italy</li>
                 <li>vanessa.bonanno2@gmail.com</li>
@@ -543,9 +543,9 @@
               <p>L-31 - 1st level degree in Computer Science</p>
             </div>
             <div class="resume-item">
-              <h4>Linguistic certificate</h4>
+              <h4>Linguistic diploma</h4>
               <h5>2010 - 2015</h5>
-              <p><em>ESABAC - Liceo 'Caterina Percoto', Udine, Italy</em></p>
+              <p><em>ESABAC - 'Caterina Percoto' high school, Udine, Italy</em></p>
               <p>Double degree in Italian and French (Baccalauréat)</p>
             </div>
           </div>
@@ -565,11 +565,11 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Ice cream woman</h4>
+              <h4>Ice cream maker</h4>
               <h5>2015 - 2022</h5>
               <p><em>Via Zorutti 115/10, Campoformido, UD, Italy</em></p>
               <ul>
-                <li>Cashier, customer service counter, ice cream woman and maker, warehouse worker</li>
+                <li>Cashier, customer service counter, ice cream vendor and maker, warehouse worker</li>
                 <li>Good communication skills (customer relationship)</li>
                 <li>Ability to organize work independently and effectively manage different tasks
                 <li>Ability to use the ice cream maker</li>
