--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <p>I learnt how to code during my Bachelor and Master's studies. I love to make and edit videos or photos and I usually rely on opensource software for the editing part.
             I have always been keen on drawing on paper, with various techniques. 
             In general, I am curious and always open to new stuff to learn.
-            Recently I approached VR technology and I am studying 3D creation tools and 3d modelling on my free time.</p>
+            Recently I approached VR technology and I am studying 3D modelling on my free time.</p>
         </div>
 
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
