--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -809,7 +809,7 @@
                       <li><strong>Past editions</strong>: 2017, 2018, 2019, 2021, 2022</li>
                       <li><strong>Location</strong>: Bressa di Campoformido, (UD), Italy</li>
                       <li><strong>By</strong>: Galdino Zuliani, We will Rock and Blues team, Pro Loco Bressa</li>
-                      <li><strong>Attendance</strong>: 500 people (estimate, 2022 edition)</li>
+                      <li><strong>Attendance</strong>: >500 people (estimate, 2022 edition)</li>
                       <li><strong>Social</strong>: <a href="https://www.facebook.com/wewillrockblues"><i class="bi bi-facebook"></i></a> <a href="https://www.instagram.com/wewillrockblues/"><i class="bi bi-instagram"></i></a></li>
                     
                     </ul>
