--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
 
       <div class="profile">
         <img src="assets/img/profilo.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light">
-          <img src="assets/img/nome.png" width="200%" class="img-fluid" alt="name" role="img">
-          <!--<a href="index.html">Vanessa Bonanno</a> --> </h1>
-
+        <!--<h1 class="text-light"> <a href="index.html">Vanessa Bonanno</a></h1> -->
+        <img src="assets/img/nome.png" width="200%" class="img-fluid" alt="name" role="img">
 
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/vanessa.bonanno.18" class="facebook"><i class="bi bi-facebook"></i></a>
