--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -43,6 +43,10 @@
   <link href="assets/css/style.css" rel="stylesheet">
  
 
+  <!--Angular - (prova) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+
+
   <!-- =======================================================
   * Template Name: iPortfolio
   * Updated: Mar 10 2023 with Bootstrap v5.2.3
@@ -63,7 +67,9 @@
 
       <div class="profile">
         <img src="assets/img/profilo.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Vanessa Bonanno</a></h1>
+        <!--<h1 class="text-light"> <a href="index.html">Vanessa Bonanno</a></h1> -->
+          <img src="assets/img/nome.png" width="200%" class="img-fluid" alt="name" role="img">
+           
         <div class="social-links mt-3 text-center">
           <a href="https://www.facebook.com/vanessa.bonanno.18" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/vein_brudal/" class="instagram"><i class="bi bi-instagram"></i></a>
@@ -103,6 +109,10 @@
 
 
       </div>
+
+      
+
+
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Portfolio Details Section ======= -->
