--- a/index.html
+++ b/index.html
@@ -813,8 +813,18 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
+
+
+  <!-- Loader -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+ 
+
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+ 
 
 </body>
 
