--- a/index.html
+++ b/index.html
@@ -10,17 +10,6 @@
   <meta content="" name="keywords">
 
     
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8M82G3XW5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-D8M82G3XW5');
-  </script>
-
-
   <!-- www.flaticon.com/free-icons/sunflower > by juicy_fish  -->
   <link href="assets/img/sunflower.png" rel="icon">
   <link href="assets/img/sunflower.png" rel="apple-touch-icon">
@@ -31,6 +20,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Satisfy&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
   
+  <!-- Google tag (gtag.js) - analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8M82G3XW5"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-D8M82G3XW5');
+  </script>
   
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
