--- a/index.html
+++ b/index.html
@@ -115,11 +115,6 @@
   
   End Hero -->
 
-
-
-
-
-
   <main id="main">
 
     <!-- ======= Portfolio Section ======= -->
@@ -348,7 +343,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li class="title"> DIGITAL COMPETENCES</li>
-                    <li><i class="bi bi-dash"></i><strong>Information processing:</strong> <span>Proficient user</span></li>
+                    <li><i class="bi bi-dash"></i><strong>Info processing:</strong> <span>Proficient user</span></li>
                     <li><i class="bi bi-dash"></i><strong>Communication:</strong> <span>Proficient user</span></li>
                     <li><i class="bi bi-dash"></i><strong>Content creation:</strong> <span>Proficient user</span></li>
                     <li><i class="bi bi-dash"></i><strong>Problem solving:</strong> <span>Proficient user</span></li>
