--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -232,7 +232,7 @@
                       <li><strong>Category</strong>: Final dissertation (MA); Research study</li>
                       <li><strong>Keywords</strong>: cohesion, participation, inclusion, digital heritage</li>
                       <li><strong>Project date</strong>: 14 March, 2023; data pubblication</li>
-                      <li><strong>Link</strong>: <a href="">SCIRES paper</a>; <a href="https://www.canva.com/design/DAFb9qjm__c/faZq7S7i23C_vZNZUCBvlw/view?utm_content=DAFb9qjm__c&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Online presentation</a></li>
+                      <li><strong>Link</strong>: <a href="">Paper (to be published soon)</a>; <a href="https://www.canva.com/design/DAFb9qjm__c/faZq7S7i23C_vZNZUCBvlw/view?utm_content=DAFb9qjm__c&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Online presentation</a></li>
                   
                       <li><strong>What I did:</strong></li>
                       <li>drafting questionnaires</li>
