--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
   <link href="assets/img/sunflower.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Satisfy&family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Cousine:ital,wght@0,400;0,700;1,400;1,700&family=Istok+Web:ital,wght@0,400;0,700;1,400;1,700&family=Satisfy&family=Shadows+Into+Light+Two&family=Wix+Madefor+Display:wght@400..800&display=swap" rel="stylesheet">
+
   <!-- Google tag (gtag.js) - analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8M82G3XW5"></script>
   <script>
