--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -105,7 +105,7 @@
             <li>Portfolio</li>
           </ol>
         </div>
-        <p>Here you can find the projects I made in the last years at university or during my spare time.</p>
+        <p>Here you can find my current designs, and past projects I made at the university or during my spare time.</p>
       </div>
     </section><!-- End Breadcrumbs -->
 
@@ -209,7 +209,7 @@
                         <img src="assets/img/Design.png" alt="">
                       </div>
                       <div class="swiper-slide">
-                        <img src="assets/img/10c.png" alt="">
+                        <img src="assets/img/10c.jpg" alt="">
                       </div>
                       <div class="swiper-slide">
                         <img src="assets/img/9a.png" alt="">
