--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -121,6 +121,7 @@
               Design
             </a>
             <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#ui">UI design</a></li>
                 <li><a class="dropdown-item" href="#sc">Building Social Cohesion (Digital heritage study)</a></li>
                 <li><a class="dropdown-item" href="#ux">Rethinking a website (UX study)</a></li>
                 <li><a class="dropdown-item" href="#graphics">Flyers, posters, reports (Graphics)</a></li>
@@ -196,7 +197,7 @@
             </div>
           </div>  -->
 
-          <section class="chiaro" id="ui design">
+          <section class="chiaro" id="ui">
           <!-- 7. UX analysis -->
           <div class="site-section pb-0">
             <div class="container">
@@ -206,16 +207,16 @@
                   <div  class="portfolio-details-slider swiper" data-aos="fade-up" data-aos-delay="100">
                     <div class="swiper-wrapper align-items-center">
                       <div class="swiper-slide">
-                        <img src="assets/img/Design.png" alt="">
+                        <img src="assets/img/Design.png" alt="" width="200px" height="auto">
                       </div>
                       <div class="swiper-slide">
-                        <img src="assets/img/10c.jpg" alt="">
+                        <img src="assets/img/10c.jpg" alt="" width="200px" height="auto">
                       </div>
                       <div class="swiper-slide">
-                        <img src="assets/img/9a.png" alt="">
+                        <img src="assets/img/9a.png" alt="" width="200px" height="auto">
                       </div>
                       <div class="swiper-slide">
-                        <img src="assets/img/7a.png" alt="">
+                        <img src="assets/img/7a.png" alt="" width="200px" height="auto">
                       </div>
                     </div>
                     <div class="swiper-pagination"></div>
